--- a/apps/saleor/overlays/stage/patches/ingress-patch.yaml
+++ b/apps/saleor/overlays/stage/patches/ingress-patch.yaml
@@ -26,6 +26,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: storefront
+                name: storefront-svc
                 port:
                   number: 3000
