--- a/apps/saleor-dashboard/overlays/stage/kustomization.yaml
+++ b/apps/saleor-dashboard/overlays/stage/kustomization.yaml
@@ -14,7 +14,7 @@ labels:
 
 images:
   - name: ACCOUNT_ID.dkr.ecr.ap-southeast-2.amazonaws.com/min-kyeol-dashboard
-    newName: 827913617839.dkr.ecr.ap-southeast-2.amazonaws.com/min-kyeol-dashboard
+    newName: 827913617839.dkr.ecr.ap-southeast-2.amazonaws.com/min-kyeol-stage-dashboard
     newTag: stage-latest
 
 patches:
